Add 2025 Model to advantage Scope